# ohara

./: .gitignore  CMakeLists.txt  README.md  patch_db.py  patch_engine.py  patch_engine_2.py  patch_engine_3.py
.github/workflows/: build.yml
ohara-backend/: main.py  requirements.txt  test_main.py
ohara-gui/: CMakeLists.txt  config.json
ohara-gui/qml/: main.qml
ohara-gui/src/: ILlmBackend.h  LlamaBackend.cpp  LlamaBackend.h  api_client.cpp  api_client.h  database_manager.cpp  database_manager.h  document_processor.cpp  document_processor.h  hardware_detector.cpp  hardware_detector.h  inference_engine.cpp  inference_engine.h  js_engine.cpp  js_engine.h  main.cpp  model_manager.cpp  model_manager.h  script_engine.cpp  script_engine.h  settings_manager.cpp  settings_manager.h  voice_manager.cpp  voice_manager.h  wasm_engine.cpp  wasm_engine.h
tests/: CMakeLists.txt  tst_document_processor.cpp  tst_inference_engine.cpp  tst_model_manager.cpp
